--- a/train.ipynb
+++ b/train.ipynb
@@ -105,7 +105,7 @@
     "mean_solid_tissue_normal = solid_tissue_normal_df.mean()\n",
     "mean_primary_tumor = primary_tumor_df.mean()\n",
     "\n",
-    "# # # Calculate the log-fold change for each CpG site\n",
+    "# # # Calculate the log-fold change for each gene\n",
     "logfc_gene = np.log10((mean_primary_tumor + 0.0001) /\n",
     "                      (mean_solid_tissue_normal + 0.0001))\n",
     "\n",
@@ -322,7 +322,7 @@
     "merged_df = pd.merge(selected, logfc_df, on='Unnamed: 0')\n",
     "merged_df\n",
     "\n",
-    "# Sort by 'logFC' in descending order and get the top 10 rows\n",
+    "# Sort by 'logFC' in descending order and get the top 8 rows\n",
     "top_8_cpg = merged_df.sort_values(by='logFC', ascending=False).head(8)"
    ]
   },
